# gdp

./: playground.cabal
app/: Main.hs  Named.hs  Sorted.hs  The.hs
